--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NEXUS International</title>
+    <title>Global Trade Partners</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +25,7 @@
           <div class="logo">
             <a href="#"><img
               src="logo_full.png"
-              alt="Nexus International Logo"
+              alt="Global Trade Partners Logo"
               class = "logo-image"
             /></span></a>
           </div>
@@ -70,11 +70,11 @@
             <span class="intro-highlight">export-quality</span> leather goods!
           </h2>
           <p class="intro-subtext">
-            Welcome to Nexus International, your source for exquisite leather
+            Welcome to Global Trade Partners, your source for exquisite leather
             from India! Our collection features stylish shoes, chic jackets,
             elegant bags, and unique accessories. We believe luxury should be
             affordable, offering tailored solutions to fit your style. Explore
-            our selection and discover why Nexus is the go-to for premium
+            our selection and discover why Global Trade Partners is the go-to for premium
             craftsmanship!
           </p>
           <div class="intro-image-wrapper">
@@ -342,7 +342,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.5
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -350,15 +350,11 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted. I am
-                    always impressed with their products and their dedication to
-                    excellence.
+                    Working with Global Trade partners has transformed our supply chain. Their full-grain leather briefcases arrive perfectly finished every time - we've seen a 40% reduction in quality rejections compared to our previous supplier. The drum-dyed colors are exceptionally consistent across bulk orders.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
-                    <span class="review-location">US</span>
+                    <span class="review-author">Alexandra Mendes</span><br />
+                    <span class="review-location">Portugal</span>
                   </div>
                 </div>
               </div>
@@ -371,7 +367,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>4
                   </div>
                 </div>
                 <div class="review-body">
@@ -379,12 +375,10 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                      As fellow business owner dealing with leather products, we're impressed with GlobalTradePartners' attention to detail. Their vegetable-tanned hides maintain perfect thickness specifications. The only reason for 4 stars - we'd love to see more exotic leather options added to their catalog.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
+                    <span class="review-author">Anthony Williams</span><br />
                     <span class="review-location">US</span>
                   </div>
                 </div>
@@ -398,7 +392,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -406,13 +400,11 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Six container shipments and zero customs issues! GlobalTradePartners' export documentation is impeccable. Their pull-up leather bags have become our bestseller - the natural aging characteristics are exactly as promised in samples.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
-                    <span class="review-location">US</span>
+                    <span class="review-author">Sophie Muller</span><br />
+                    <span class="review-location">Germany</span>
                   </div>
                 </div>
               </div>
@@ -425,7 +417,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -433,13 +425,11 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Game-changing MOQs for premium quality. Their corrected grain leather wallets offer perfect balance of durability and price point for our mid-range market. 12% increase in repeat orders since switching to GlobalTradePartners.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
-                    <span class="review-location">US</span>
+                    <span class="review-author">Alicia Rosli</span><br />
+                    <span class="review-location">Singapore</span>
                   </div>
                 </div>
               </div>
@@ -452,7 +442,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>4
                   </div>
                 </div>
                 <div class="review-body">
@@ -460,13 +450,11 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Outstanding custom embossing service. Our branded bridle leather belts arrived with flawless stamping. Lead time extended by 1 week in Q4, but communication about delays was proactive.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
-                    <span class="review-location">US</span>
+                    <span class="review-author">Andrei Ivanov</span><br />
+                    <span class="review-location">Russia</span>
                   </div>
                 </div>
               </div>
@@ -479,7 +467,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -487,12 +475,10 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Finally found an exporter who understands small-batch luxury. Their aniline-dyed handbags show beautiful natural variations.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
+                    <span class="review-author">Emma Smith</span><br />
                     <span class="review-location">US</span>
                   </div>
                 </div>
@@ -506,7 +492,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -514,13 +500,11 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Re-exporting GlobalTradePartners goods to EU markets has been seamless. Their chrome-free leather meets all REACH compliance standards. Perfect solution for our eco-conscious European clients.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
-                    <span class="review-location">US</span>
+                    <span class="review-author">Do-yun</span><br />
+                    <span class="review-location">South Korea</span>
                   </div>
                 </div>
               </div>
@@ -533,7 +517,7 @@
                     class="review-user-image"
                   />
                   <div class="review-rating">
-                    <span class="star">★</span>4.3
+                    <span class="star">★</span>5
                   </div>
                 </div>
                 <div class="review-body">
@@ -541,12 +525,10 @@
                     <img src="quote.png" alt="Quote mark" />
                   </div>
                   <p class="review-text">
-                    The team at Nexus International goes above and beyond to
-                    ensure customer satisfaction. Their leather goods are
-                    consistently high-quality and beautifully crafted.
+                    Financial transparency we've never seen before. Detailed breakdown of every cost component from tannery to shipping. Their full-grain premium leather bags helped us achieve 22% margin improvement.
                   </p>
                   <div class="review-footer">
-                    <span class="review-author">John Doe</span><br />
+                    <span class="review-author">Alexia Washington</span><br />
                     <span class="review-location">US</span>
                   </div>
                 </div>
@@ -667,9 +649,9 @@
           <div class="footer-bottom">
             <div class="footer-logo">
               <!-- Replace with your actual logo -->
-              <img src="logo_basic.png" alt="Nexus International Logo" />
+              <img src="logo_basic.png" alt="Global Trade Partners Logo" />
             </div>
-            <p class="footer-copy">© 2024 — Nexus International</p>
+            <p class="footer-copy">© 2024 — Global Trade Partners</p>
             <div class="footer-social">
               <a href="#" aria-label="WhatsApp" class="social-icon">
                 <img src="whatsapp_icon.png" alt="WhatsApp Icon" />
