more changes on 1st feb

--- a/index.html
+++ b/index.html
@@ -547,9 +547,7 @@
                 Get in <span class="italic-highlight">touch</span>
               </h2>
               <p class="contact-intro-text">
-                Lorem ipsum dolor sit amet consectetur. Auctor pellentesque
-                semper consequat neque accumsan nibh tellus. Vitae sed vitae
-                cras donec.
+                Submit your inquiry to access India's leather export advantages: competitive pricing, MOQs from 40 units, and bespoke designs meeting global compliance standards. Our sourcing specialists respond within 12 hours.
               </p>
 
               <form class="contact-form" id="contactForm">
@@ -632,17 +630,16 @@
               <h3 class="footer-heading">Contact Us</h3>
               <p class="footer-contact-info">+91 7980 819 962</p>
               <h3 class="footer-heading">Email</h3>
-              <p class="footer-contact-info">contact@nexusinternational.com</p>
+              <p class="footer-contact-info">contact@globaltradepartners.org</p>
             </div>
 
             <div class="footer-column footer-address">
               <h3 class="footer-heading">Address</h3>
               <p class="footer-address-info">
-                Kalyani Apartment, Chakraborty para,<br />Nabapally, Barasat,
-                Kol-700124
+                56th Cross Rd, 3rd Block, Rajajinagar, Bengaluru, Karnataka-560010
               </p>
               <h3 class="footer-heading">Opening Hours</h3>
-              <p class="footer-hours">9am-6pm<br />GMT +5:30</p>
+              <p class="footer-hours">10am-7pm<br />GMT +5:30</p>
             </div>
           </div>
 
